--- a/lib/intl/intl_en.arb
+++ b/lib/intl/intl_en.arb
@@ -1,3 +1,13 @@
 {
-  "signUpTitle": "Sign up for TikTong"
+  "@@locale": "en",
+  "signUpTitle": "Sign up for {nameOfTheApp}",
+  "@signUpTitle": {
+    "description": "The title people see when they open the app for the first time.",
+    "placeholders": {
+      "nameOfTheApp": {
+        "type": "String",
+        "example": "TikTong"
+      }
+    }
+  }
 }
